--- a/variables.tf.example
+++ b/variables.tf.example
@@ -1,3 +1,13 @@
+variable "qcow_image_filename" {
+    description = "QCOW2 image filename."
+    default  = "ubuntu-bionic.qcow2"
+}
+
+variable "qcow_image_path" {
+    description = "QCOW2 image path."
+    default  = "/home/user/data"
+}
+
 variable "master_node_prefix" {
     description = "Master node prefix."
     default  = "master"
@@ -48,6 +58,30 @@ variable "worker_node_disk" {
     default  = "21474836480"
 }
 
+variable "etcd_node_prefix" {
+    description = "Worker node prefix."
+    default  = "etcd"
+}
+
+variable "etcd_node_count" {
+    description = "The number of etcd nodes."
+    default  = "3"
+}
+
+variable "etcd_node_cpu" {
+    description = "Worker node cpu's."
+    default  = "4"
+}
+
+variable "etcd_node_memory" {
+    description = "Worker node memory."
+    default  = "4096"
+}
+
+variable "etcd_node_disk" {
+    description = "Worker node disk size."
+    default  = "21474836480"
+}
 
 variable "ssh_authorized_key" {
     description = "SSH authorized key"
